Skip to content

Cannot Toggle Time Elapsed / Remaining While Paused

Using current version as of submission date 2-3-21 (3.0.12) on macOS.

I can only toggle the time between elapsed / remaining while the video is playing, the ability to toggle goes away when the video is paused.

I am pretty sure that VLC used to have this ability, because it is one of the main ways I use a video player, and I have been using VLC on and off since around 2008. Basically, my default view is to have it set to show time elapsed - but occasionally I will pause the video specifically so I can toggle and check how much time is remaining, before then switching it back to elapsed and resuming my video.

It seems to me that this constitutes a bug, as I cannot imagine a use case where the current behavior would be preferable. However, I do apologize sincerely if this is not a bug and it is the intended behavior.

If the current behavior is indeed as intended, would you (the devs) please consider changing the behavior to what I have described? It feels like inconsistent UI to have a click toggle the time sometimes, but then do nothing at other times. Please feel free to contact me via email if needed.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information