macosx: time fields: Cache alternative time representation

This allows to toggle between remaining and elapsed
time at any time, also while the media is paused.

Close #25433
(backport of 497fc4216d776fc81d241578eaf9abd17dbeedcb)